--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,44 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .search-bar{
   border: none;
   outline: none;
   width: 350px;
+}
+::-webkit-scrollbar{
+  width: 0;
+  height: 2px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: rgb(114, 113, 113);
+  border-radius: 10px;
+  height: 200px;
+}
+::-webkit-scrollbar-track{
+  background-color: transparent;
+}
+.category-btn{
+  font-weight: bold !important;
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  cursor: pointer;
+  background: transparent;
+  outline: none;
+  border: none;
+  padding: 7px 15px;
+  margin: 10px 0px;
+  border-radius: 20px;
+  transition: all 0.3s ease;
+}
+.category-btn:hover{
+  background-color: #76323f !important;
+  color: #ffffff !important;
+}
+.category-btn:hover span{
+  color: #ffffff !important;
 }
